ASSIGNMENT_NO3.html

--- a/ASSIGNMENT_NO3.html
+++ b/ASSIGNMENT_NO3.html
@@ -11,6 +11,6 @@
 <br>
 <br>
 <br>
-<a href="C:\Users\lenovo\Desktop\Html_Css\My_Intro.mp4" width="320" height="240">Click here for Video</a>
+<a href="./My_Intro.mp4" width="320" height="240">Click here for Video</a>
 </body>
 </html>
